--- a/TFG/intefaz gráfica/InterfazTFG/src/AAAALanzador/AAAInicio.form
+++ b/TFG/intefaz gráfica/InterfazTFG/src/AAAALanzador/AAAInicio.form
@@ -91,11 +91,11 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="TUTOR: CLARA BENAC EARLE"/>
+        <Property name="text" type="java.lang.String" value="DIRECTORA: CLARA BENAC EARLE"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="370" y="480" width="-1" height="-1"/>
+          <AbsoluteConstraints x="350" y="470" width="-1" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
