--- a/TFG/intefaz gráfica/InterfazTFG/src/Cenicienta/CreditosCenicienta.form
+++ b/TFG/intefaz gráfica/InterfazTFG/src/Cenicienta/CreditosCenicienta.form
@@ -39,7 +39,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Autores"/>
+        <Property name="text" type="java.lang.String" value="Informaci&#xf3;n"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -145,7 +145,7 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="99" red="0" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Tiempo m&#xe1;ximo: 1,000 s                             Memoria m&#xe1;xima: 4096 KiB"/>
+        <Property name="text" type="java.lang.String" value="Tiempo m&#xe1;ximo: 1,000 s                            "/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -209,7 +209,7 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="Isabel Pita&#xa;Alberto Verdejo&#xa;Pedro Pablo G&#xf3;mez Mart&#xed;n.&#xa;&#xa;Fuente: La imagen pertenece a la pel&#xed;cula de Disney, &quot;Cenicienta&quot;."/>
+            <Property name="text" type="java.lang.String" value="Autor: Isabel Pita.&#xa;Revisores: Alberto Verdejo y Pedro Pablo G&#xf3;mez Mart&#xed;n.&#xa;Fuente: La imagen pertenece a la pel&#xed;cula de Disney, &quot;Cenicienta&quot;."/>
           </Properties>
         </Component>
       </SubComponents>
