--- a/TFG/intefaz gráfica/InterfazTFG/src/Cenicienta/EnunciadoCenicienta.form
+++ b/TFG/intefaz gráfica/InterfazTFG/src/Cenicienta/EnunciadoCenicienta.form
@@ -141,7 +141,7 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="99" red="0" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Tiempo m&#xe1;ximo: 1,000 s                             Memoria m&#xe1;xima: 4096 KiB"/>
+        <Property name="text" type="java.lang.String" value="Tiempo m&#xe1;ximo: 1,000 s                             "/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -206,7 +206,7 @@
               <Font name="Arial" size="13" style="0"/>
             </Property>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="Cenicienta vive con su madrastra y sus dos hermanastras, que le hacen trabajar todo el d&#xed;a en las faenas de la casa. Hoy el Palacio Real ha &#xa;anunciado que su Majestad el pr&#xed;ncipe va a celebrar un baile para buscar esposa. Cenicienta quiere asistir al baile pero sus envidiosas hemanastras&#xa;convencen a su madrastra para que le mande muchas tareas y no pueda asistir. La madrastra le propone una serie de trabajos con la condici&#xf3;n de &#xa;que si los termina a tiempo la llevar&#xe1; al baile.&#xa;&#xa;Cenicienta sabe el tiempo que tarda en realizar cada una de las tareas encomendadas, as&#xed; que puede calcular si merece la pena trabajar o si de &#xa;todas formas no conseguir&#xe1; llegar al baile."/>
+            <Property name="text" type="java.lang.String" value="Cenicienta vive con su madrastra y sus dos hermanastras, que le hacen trabajar todo el d&#xed;a en las faenas de la casa. Hoy el Palacio Real ha &#xa;anunciado que su Majestad el pr&#xed;ncipe va a celebrar un baile para buscar esposa. Cenicienta quiere asistir al baile pero sus envidiosas hermanastras&#xa;convencen a su madrastra para que le mande muchas tareas y no pueda asistir. La madrastra le propone una serie de trabajos con la condici&#xf3;n de &#xa;que si los termina a tiempo la llevar&#xe1; al baile.&#xa;&#xa;Cenicienta sabe el tiempo que tarda en realizar cada una de las tareas encomendadas, as&#xed; que puede calcular si merece la pena trabajar o si de &#xa;todas formas no conseguir&#xe1; llegar al baile."/>
           </Properties>
         </Component>
       </SubComponents>
