--- a/TFG/intefaz gráfica/InterfazTFG/src/LaTiendaDeLaEsquina/CreditosLaTiendaDeLaEsquina.form
+++ b/TFG/intefaz gráfica/InterfazTFG/src/LaTiendaDeLaEsquina/CreditosLaTiendaDeLaEsquina.form
@@ -39,7 +39,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Autores"/>
+        <Property name="text" type="java.lang.String" value="Informaci&#xf3;n"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -209,7 +209,7 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="Isabel Pita&#xa;Marco Antonio G&#xf3;mez Mart&#xed;n&#xa;Alberto Verdejo&#xa;Pedro Pablo G&#xf3;mez Mart&#xed;n"/>
+            <Property name="text" type="java.lang.String" value="Autor: Isabel Pita, Marco Antonio G&#xf3;mez Mart&#xed;n, Alberto Verdejo y Pedro Pablo G&#xf3;mez Mart&#xed;n."/>
           </Properties>
         </Component>
       </SubComponents>
