--- a/TFG/intefaz gráfica/InterfazTFG/src/LaTiendaDeLaEsquina/EjemplosLaTiendaDeLaEsquina.form
+++ b/TFG/intefaz gráfica/InterfazTFG/src/LaTiendaDeLaEsquina/EjemplosLaTiendaDeLaEsquina.form
@@ -156,7 +156,7 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="99" red="0" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Tiempo m&#xe1;ximo: 3,000 s                             Memoria m&#xe1;xima: 4096 KiB"/>
+        <Property name="text" type="java.lang.String" value="Tiempo m&#xe1;ximo: 3,000 s                             "/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
