--- a/TFG/intefaz gráfica/InterfazTFG/src/LosProblemasDeSerRico/EjemplosLosProblemasDeSerRico.form
+++ b/TFG/intefaz gráfica/InterfazTFG/src/LosProblemasDeSerRico/EjemplosLosProblemasDeSerRico.form
@@ -53,7 +53,7 @@
               <Font name="Arial" size="13" style="0"/>
             </Property>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="La entrada comienza con un n&#xfa;mero no negativo indicando el n&#xfa;mero de casos de prueba que vendr&#xe1;n a continuaci&#xf3;n. Por cada caso de prueba&#xa;se proporcionar&#xe1;, en una &#xfa;nica l&#xed;nea, la descripci&#xf3;n del acuario con tres n&#xfa;meros: el n&#xfa;mero de compartimentos del acuario (&gt;0), la capacidad &#xa;en litros del m&#xe1;s grande (&gt;0), y la diferencia de litros entre dos compartimentos adyacentes (&#x2265;0). Ninguno de los tres n&#xfa;meros ser&#xe1; mayor de &#xa;10.000.&#xa;&#xa;Para cada caso de prueba de la entrada, el programa escribir&#xe1; el n&#xfa;mero de litros de agua mineral que debieron comprarse para llenar el acuario.&#xa;&#xa;ENTRADA DE EJEMPLO&#xa;&#xa;3&#xa;5 300 10&#xa;4 400 20&#xa;3 500 30&#xa;&#xa;SALIDA DE EJEMPLO&#xa;&#xa;1400&#xa;1480&#xa;1410"/>
+            <Property name="text" type="java.lang.String" value="La entrada comienza con un n&#xfa;mero no negativo indicando el n&#xfa;mero de casos de prueba que vendr&#xe1;n a continuaci&#xf3;n. Por cada caso de prueba&#xa;se proporcionar&#xe1;, en una &#xfa;nica l&#xed;nea, la descripci&#xf3;n del acuario con tres n&#xfa;meros: el n&#xfa;mero de compartimentos del acuario (&gt;0), la capacidad &#xa;en litros del m&#xe1;s grande (&gt;0), y la diferencia de litros entre dos compartimentos adyacentes (&#x2265;0). Ninguno de los tres n&#xfa;meros ser&#xe1; mayor de &#xa;10.000.&#xa;&#xa;Para cada caso de prueba de la entrada, el programa escribir&#xe1; el n&#xfa;mero de litros de agua mineral que debieron comprarse para llenar el acuario.&#xa;&#xa;ENTRADA DE EJEMPLO&#xa;&#xa;3 &#xa;5 300 10 &#xa;4 400 20 &#xa;3 500 30 &#xa;&#xa;SALIDA DE EJEMPLO&#xa;&#xa;1400 &#xa;1480 &#xa;1410 "/>
           </Properties>
         </Component>
       </SubComponents>
@@ -156,7 +156,7 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="99" red="0" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Tiempo m&#xe1;ximo: 8,000 s                             Memoria m&#xe1;xima: 4096 KiB"/>
+        <Property name="text" type="java.lang.String" value="Tiempo m&#xe1;ximo: 8,000 s                             "/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
