--- a/TFG/intefaz gráfica/InterfazTFG/src/MichaelJFox/CreditosMichaelJFox.form
+++ b/TFG/intefaz gráfica/InterfazTFG/src/MichaelJFox/CreditosMichaelJFox.form
@@ -39,7 +39,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Autores"/>
+        <Property name="text" type="java.lang.String" value="Informaci&#xf3;n"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -145,7 +145,7 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="99" red="0" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Tiempo m&#xe1;ximo: 2,000 s                             Memoria m&#xe1;xima: 4096 KiB"/>
+        <Property name="text" type="java.lang.String" value="Tiempo m&#xe1;ximo: 2,000 s                             "/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -209,7 +209,7 @@
               <Font name="Arial" size="13" style="0"/>
             </Property>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="Marco Antonio G&#xf3;mez Mart&#xed;n&#xa;Pedro Pablo G&#xf3;mez Mart&#xed;n&#xa;Alberto Verdejo.&#xa;Fuente: Problema aparecido por primera vez en el concurso nacional de ProgramaMe 2017 (http://programa-me.com/2017/nac/),&#xa;celebrado el 9 de junio, la misma fecha mencionada en el enunciado. Imagen del Delorean de dominio p&#xfa;blico. &#xa;La imagen del pato Donald es propiedad de The Walt Disney Company"/>
+            <Property name="text" type="java.lang.String" value="Autores: Marco Antonio G&#xf3;mez Mart&#xed;n y Pedro Pablo G&#xf3;mez Mart&#xed;n.&#xa;Revisor: Alberto Verdejo.&#xa;Fuente: Problema aparecido por primera vez en el concurso nacional de ProgramaMe 2017 &#xa;(http://programa-me.com/2017/nac/), celebrado el 9 de junio, la misma fecha mencionada en el enunciado. &#xa;Imagen del Delorean de dominio p&#xfa;blico. La imagen del pato Donald es propiedad de The Walt Disney Company"/>
           </Properties>
         </Component>
       </SubComponents>
